--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bíblia Online</title>
+    <title>A Bíblia Online</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>Bíblia Online</h1>
+      <h1>A Bíblia Online</h1>
     </header>
     <main>
       <section>
@@ -51,7 +51,7 @@
       </section>
     </main>
     <footer>
-      <p>Desenvolvido por [seu nome aqui]</p>
+      <p>Desenvolvido por Flavio Fonseca</p>
     </footer>
     <script src="script.js"></script>
   </body>
