--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
     <!-- Seu código JavaScript aqui -->
     <script>
       // Seu código JavaScript vai aqui
+      const apiKey = "SUA CHAVE DE API AQUI";
+const baseUrl = "https://api.biblia.com/v1/bible";
+
+// Selecionando elementos da página
+const searchForm = document.querySelector("#search-form");
+const bookSelect = document.querySelector("#book-select");
+const chapterSelect = document.querySelector("#chapter-select");
+const verseSelect = document.querySelector("#verse-select");
+const bibleContainer = document.querySelector("#bible-container");
+
+// Criando evento para enviar solicitação ao servidor ao enviar o formulário
+searchForm.addEventListener("submit", async (event) => {
+  event.preventDefault(); // evita o recarregamento da página ao enviar o formulário
+
+  const book = bookSelect.value;
+  const chapter = chapterSelect.value;
+  const verse = verseSelect.value;
+  const version = "nvi"; // substitua pela versão desejada
+
+  const url = `${baseUrl}/content/${version}.html?passage=${book}${chapter}:${verse}&key=${apiKey}`;
+
+  try {
+    const response = await axios.get(url);
+    bibleContainer.innerHTML = response.data;
+  } catch (error) {
+    console.error(error);
+  }
+});
+
     </script>
   </body>
 </html>
