--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+U6QLrE9MVBThI9pzU6j7gDQIXYgD5p"
       crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <div class="container mt-5">
