--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 
     <div id="bible-content">
       <p>Selecione uma versão, livro e capítulo para carregar a Bíblia.</p>
+      
+      <label for="notification-checkbox">Receber notificações com versículos ao longo do dia:</label>
+      <input type="checkbox" id="notification-checkbox">
     </div>
 
   </div>
