--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         <option value="ml">Malaquias</option>
       </select>
       <label for="chapter-select">Capítulo:</label>
-      <select id="chapter-select"></select>
+      <select id="chapter-select">
+      <option value="1">1</option>
+      </select>
       <button id="load-button">Carregar</button>
     </div>
 
