--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
         $(document).ready(function() {
             // preencher lista de versões
-            var apiKey = 'sua chave de API aqui';
+            var apiKey = '9c57406cc189bdfa9245009c3f1036ac';
             var versionsUrl = 'https://api.scripture.api.bible/v1/bibles';
             fetch(versionsUrl, {headers: {'api-key': apiKey}})
                 .then(response => response.json())
