--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Bíblia Sagrada</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bíblia Sagrada</h1>
